--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    . <a href="">コピペ用</a>
+    . <a href="">コピペ用</a><br>
     <h1>基本動作</h1>
     1. <a href="comment_out.php">コメントアウトについて</a><br>
     2. <a href="var_dump.php">echo文とvar_dump()関数</a><br>
+    3. <a href="variables_variable.php">可変変数</a><br>
+    4. <a href="global_scope.php">変数のスコープ</a><br>
   </body>
 </html>
